[FIXED JAVAHELP-33] URL hygiene.
svn path=/trunk/; revision=89